--- a/Analyses/05-StatisticalProgramming.qmd
+++ b/Analyses/05-StatisticalProgramming.qmd
@@ -1,6 +1,6 @@
 ---
 title: "05-Statistical Programming in R"
-author: "Insert Your Name Here"
+author: "Jordan Wozniak"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 format:
   html:
@@ -32,9 +32,9 @@ For course instructions on using Quarto, see here: <https://isaactpetersen.githu
 ```{r}
 #install.packages("remotes")
 #remotes::install_github("DevPsyLab/petersenlab")
-#remotes::install_github("FantasyFootballAnalytics/ffanalytics")
+remotes::install_github("FantasyFootballAnalytics/ffanalytics")
 
-#update.packages(ask = FALSE)
+update.packages(ask = FALSE)
 ```
 
 ## Load Libraries
@@ -53,7 +53,7 @@ library("tidyverse")
 Load the data file that is in the following location: `./Data/player_stats_weekly.Rdata` (if running locally) or `../Data/player_stats_weekly.Rdata` (if rendering).
 
 ```{r}
-
+load("../Data/player_stats_weekly.Rdata")
 ```
 
 ## Download Data
@@ -61,7 +61,7 @@ Load the data file that is in the following location: `./Data/player_stats_weekl
 Download the injuries data and load it into an object called `nfl_injuries`:
 
 ```{r}
-
+nfl_injuries
 ```
 
 # Characteristics of the Data
