--- a/Analyses/07-DataVisualization.qmd
+++ b/Analyses/07-DataVisualization.qmd
@@ -1,6 +1,6 @@
 ---
 title: "07-Data Visualization and Interpretation"
-author: "Insert Your Name Here"
+author: "Jordan Wozniak"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 format:
   html:
@@ -57,7 +57,7 @@ library("tidyverse")
 Load the data file that is in the following location: `./Data/player_stats_weekly.Rdata` (if running locally) or `../Data/player_stats_weekly.Rdata` (if rendering).
 
 ```{r}
-
+load("..Data/player_stats_weekly.Rdata")
 ```
 
 # Univariate Distribution
@@ -66,23 +66,23 @@ Load the data file that is in the following location: `./Data/player_stats_weekl
 
 Create a histogram of weekly fantasy points among QBs, RBs, WRs, and TEs (the variable is `fantasyPoints`):
 
-```{r}
+"```{r}"
 ggplot2::ggplot(
-  data = INSERT %>%
+  data = player_stats_weekly %>%
     filter(position_group %in% c("QB","RB","WR","TE")),
   mapping = aes(
     x = fantasyPoints)
 ) +
-  geom_INSERT(
-    color = "INSERT",
-    fill = "INSERT"
+  geom_histogram(
+    color = "black",
+    fill = "green"
   ) +
   labs(
-    x = "INSERT",
-    y = "INSERT",
-    title = "INSERT"
+    x = "Fantasy Points",
+    y = "Count",
+    title = "Histogram of Fantasy Points within Position"
   )
-```
+"```"
 
 ## Density Plot
 
