--- a/Analyses/07-DataVisualization.qmd
+++ b/Analyses/07-DataVisualization.qmd
@@ -57,7 +57,7 @@ library("tidyverse")
 Load the data file that is in the following location: `./Data/player_stats_weekly.Rdata` (if running locally) or `../Data/player_stats_weekly.Rdata` (if rendering).
 
 ```{r}
-load("..Data/player_stats_weekly.Rdata")
+load("../Data/player_stats_weekly.Rdata")
 ```
 
 # Univariate Distribution
@@ -89,7 +89,20 @@ ggplot2::ggplot(
 Create a density plot of weekly fantasy points by position among QBs, RBs, WRs, and TEs (the variable is `fantasyPoints`):
 
 ```{r}
-
+ggplot2::ggplot(
+  data = player_stats_weekly %>%
+    filter(position_group %in% c("QB","RB","WR","TE")),
+  mapping = aes(
+    x = fantasyPoints)
+) +
+  geom_density(
+  ) +
+  labs(
+    x = "Fantasy Points",
+    y = "Count",
+    title = "Histogram of Fantasy Points within Position"
+  )
+```
 ```
 
 # Scatterplot
